# goit-ds-hw-01

assist/: dockerfile  pyproject.toml
assist/src/assist/: main.py
